# SimpleCTM

./: .gitignore  README.md  arc_agi.py  ctm.py  ctm_extended.py  ctm_extended_model.pth  ctm_imagenette.py  ctm_imagenette_model.pth  ctm_modelnet.py  ctm_nas.py  ctm_opengenome.py  ctm_opengenome_conv1d.py  ctm_shakespeare.py  ctm_spatial_model.pth  ff_ef_cf_gated_multitask_ctm.pth  ideas.md  md_me_cf_cc_ff_ef_ext_multitask_ctm.pth  modal_experiment.py  pyproject.toml  requirements.txt  save_utils.py  transformer_shakespeare.py
ctm_extended_ff_sc_wt_gated_plots/: multitask_ctm.pth
ctm_extended_ff_sc_wt_gated_plots_1/: multitask_ctm.pth
ctm_extended_ff_sc_wt_gated_plots_1/mlruns/0/: meta.yaml
ctm_extended_ff_sc_wt_gated_plots_inject_2/: multitask_ctm.pth
ctm_extended_ff_sc_wt_perceiver_plots/: multitask_perceiver_ctm.pth
ff_sc_wt_gated_plots/: mlflow.db
gated_ctm/: ctm_extended.py  only_gated.py
multitask_extended/: multitask_extended.py
multitask_gated_perceiver_ctm/: ctm_extended.py  ff_ef_cf_gated_multitask_ctm.pth
multitask_unextended/: ablation_multitask.py  md_me_cf_cc_ff_ef_multitask_ctm.pth  multitask.py  multitask_moredata.py
multitask_unextended/cifar_mnist/: combined_multitask_ctm.pth  ctm_model.pth
multitask_unextended/cifar_only/: cf_multitask_ctm.pth
multitask_unextended/mnist_only/: multitask_ctm_model.pth
simplectm/: __init__.py  ctm.py  ctm_modelnet.py  ctm_opengenome.py  ctm_opengenome_conv1d.py  ctm_shakespeare.py  modal_experiment.py  modal_experiment_transformer.py  modal_router.py  opengenome_cache.py  transformer_shakespeare.py
simplectm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
