[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplectm"
version = "0.1.0"
description = "A super-simplified PyTorch replica of the Continuous Thought Machine (CTM) from Sakana AI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alexandre"}
]
maintainers = [
    {name = "Alexandre"}
]
keywords = ["pytorch", "neural-networks", "ctm", "continuous-thought-machine", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "matplotlib",
    "datasets",
    "modal",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/xandykati98/SimpleCTM"
Repository = "https://github.com/xandykati98/SimpleCTM"
Issues = "https://github.com/xandykati98/SimpleCTM/issues"

[tool.setuptools]
packages = ["simplectm"]

[tool.setuptools.package-data]
simplectm = ["*.py"]
